# aco

./: .dockerignore  .gitignore  .ruffignore  MEASURE_VALUE_SET_AUDIT.md  README.md  coverage.xml  pyproject.toml  uv.toml
.dev/: acoharmony.code-workspace  release-images.sh  setup-git.sh
.githooks/: post-commit  pre-commit  run-coverage
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
deploy/: .gitignore  LICENSE  docker-compose.yml
deploy/compose/: docker-compose.yml
deploy/compose/services/: 4icli.yml  aco.yml  docs.yml  marimo.yml  testing.yml
deploy/conf/marimo/: update-custom-index.py  update-custom-index.sh
deploy/images/4icli/: .dockerignore  4icli-with-persist  Dockerfile  README.md  bootstrap.sh  config.txt.example  entrypoint.sh
deploy/images/docs/: Dockerfile  entrypoint.js
deploy/images/internal-ca/: Dockerfile  generate-ca.sh
deploy/images/marimo/: Dockerfile  README.md  entrypoint.sh  marimo.toml  update-custom-index.py  update-custom-index.sh
deploy/images/uv/: Dockerfile
deploy/services/: 4icli.yml  aco.yml  docs.yml  marimo.yml  networks.yml  testing.yml
docs/: DATA_LINEAGE.md
scripts/: regenerate_reconciliation_fixtures.py  release_after_ci.sh
src/acoharmony/: __init__.py  __main__.py  _catalog.py  _config_loader.py  _expressions.py  _risk.py  _runner.py  _store.py  _version.py  cli.py  config.py  medallion.py  parsers.py  result.py  tables.py  tracking.py  transforms.py
src/acoharmony/_4icli/: README.md  __init__.py  _shared_drive_mapping.py  cli.py  client.py  comparison.py  config.py  inventory.py  models.py  parser.py  processor.py  registry.py  state.py
src/acoharmony/_cite/: README.md  __init__.py  decorators.py  registry.py  state.py
src/acoharmony/_config/: README.md  aco.toml  services.yaml
src/acoharmony/_crosswalks/: __init__.py  bar_to_crr.yaml
src/acoharmony/_databricks/: __init__.py  _pipeline.py  _state.py  _transfer.py  _uc_tables.py  _uc_volume.py
src/acoharmony/_decor8/: README.md  __init__.py  composition.py  expressions.py  performance.py  pipelines.py  transforms.py  validation.py
src/acoharmony/_depends/: __init__.py
src/acoharmony/_deploy/: __init__.py  _core.py  _docker.py  _freshness.py  _images.py  _manager.py  _profiles.py  _registry.py  _services.py  _state.py  _version.py
src/acoharmony/_dev/: README.md  __init__.py
src/acoharmony/_exceptions/: __init__.py  _base.py  _catalog.py  _decorators.py  _parsing.py  _pipeline.py  _registry.py  _storage.py  _transform.py  _validation.py
src/acoharmony/_expressions/: README.md  __init__.py  _aco_demographics_join.py  _aco_metadata.py  _aco_metrics.py  _aco_office_match.py  _aco_provider_join.py  _aco_temporal_alr.py  _aco_temporal_bar.py  _aco_temporal_demographics.py  _aco_temporal_ffs.py  _aco_temporal_summary.py  _aco_transition_expired_sva.py  _aco_transition_inactive.py  _aco_transition_lost_provider.py  _aco_transition_moved_ma.py  _aco_transition_newly_added.py  _aco_transition_termed_bar.py  _aco_transition_total_lost.py  _aco_transition_unresolved.py  _aco_voluntary_join.py  _acr_readmission.py  _alignment_delivery.py  _append_detect.py  _bene_mbi_map.py  _bnmr_cap_reconciliation.py  _bnmr_reconciliation.py  _bnmr_risk_normalization.py  _bnmr_risk_reconciliation.py  _cclf_adr.py  _cclf_claim_filters.py  _cclf_mer_taxonomy.py  _ccsr.py  _chronic_conditions.py  _cite_download.py  _cite_enrichment.py  _cite_extraction.py  _cite_processing.py  _cite_storage.py  _claim_id_match.py  (+68 more)
src/acoharmony/_log/: README.md  __init__.py  config.py  writer.py
src/acoharmony/_notes/: __init__.py  _acr.py  _analysis.py  _base.py  _calendar.py  _cite.py  _consolidated_alignments.py  _crosswalk.py  _data.py  _gc_notifications.py  _gift_card.py  _hdai.py  _hedr.py  _high_needs.py  _home_visit.py  _identity.py  _mailers.py  _panels.py  _pfs.py  _pmpm.py  _provider.py  _quality.py  _reach.py  _setup.py  _signature.py  _sva.py  _sva_pdf_extract.py  _sva_submissions.py  _tparc.py  _ui.py  _utils.py  _wound_care.py  config.py  generator.py  plugins.py
src/acoharmony/_parsers/: README.md  __init__.py  _aco_id.py  _csv.py  _date_extraction.py  _date_handler.py  _delimited.py  _ecfr_xml.py  _excel.py  _excel_multi_sheet.py  _federal_register_xml.py  _filename_extractors.py  _fixed_width.py  _html.py  _json.py  _latex.py  _mabel_log.py  _markdown.py  _model_aware.py  _parquet.py  _participant_list.py  _participant_list_excel.py  _pdf.py  _pyred.py  _reach_bnmr.py  _registry.py  _source_tracking.py  _tparc.py  _transformations.py  _xml.py
src/acoharmony/_pipes/: README.md  __init__.py  _alignment.py  _all.py  _analytics_gold.py  _bronze_all.py  _bronze_staged.py  _builder.py  _cclf_bronze.py  _cclf_gold.py  _cclf_quick.py  _cclf_silver.py  _checkpoint.py  _enterprise_crosswalk.py  _high_needs.py  _home_visit_gold.py  _identity_timeline.py  _mx_validate.py  _pfs_rates_pipe.py  _preferred_providers.py  _reference_data.py  _registry.py  _stage.py  _sva_log.py  _wound_care.py  _wound_care_analysis.py
src/acoharmony/_puf/: README.md  __init__.py  models.py  pfs_data.yaml  pfs_inventory.py  puf_cli.py  puf_inventory.py  puf_state.py  puf_unpack.py  rvu_data.yaml  utils.py  zipcarrier_data.yaml
src/acoharmony/_registry/: __init__.py  base.py  decorators.py  registry.py
src/acoharmony/_runner/: __init__.py  _core.py  _file_processor.py  _memory.py  _pipeline_executor.py  _registry.py  _schema_transformer.py
src/acoharmony/_schemas/: README.md  aco_alignment.yml  aco_financial_guarantee_amount.yml  alr.yml  alternative_payment_arrangement_report.yml  annual_beneficiary_level_quality_report.yml  annual_quality_report.yml  bar.yml  beneficiary_data_sharing_exclusion_file.yml  beneficiary_demographics.yml  beneficiary_hedr_transparency_files.yml  beneficiary_xref.yml  bnex.yml  cclf0.yml  cclf1.yml  cclf2.yml  cclf3.yml  cclf4.yml  cclf5.yml  cclf6.yml  cclf7.yml  cclf8.yml  cclf9.yml  cclf_management_report.yml  cclfa.yml  cclfb.yml  census.yml  cms_geo_zips.yml  cms_inquiry.yml  consolidated_alignment.yml  eligibility.yml  emails.yml  (+55 more)
(+978 files in other folders)
