[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acoharmony"
version = "0.1.1"
description = "ACO program data wrangling and healthcare data processing"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
keywords = ["healthcare", "medicare", "aco", "cclf", "polars"]
authors = [
  { name = "Kris Coriwn", email = "kcorwin@harmonycares.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "polars>=0.20.0",
  "pyarrow>=21.0.0",
  "numpy>=2.0.2",
  "pyyaml>=6.0",
  "click>=8.0.0",
  "python-dateutil>=2.9.0.post0",
  "fastexcel>=0.15.1",
  "xlsxwriter>=3.2.9",
  "openpyxl>=3.1.5",
  "duckdb>=1.3.2",
  "tomli>=2.3.0",
  "lxml>=6.0.2",
  "pydantic>=2.11.7",
]

[project.optional-dependencies]
full = [
  "jinja2>=3.0.0",
  "psutil>=7.0.0",
  "duckdb>=1.1.0",
  "marimo>=0.21.1",
  "dbt-duckdb>=1.9.6",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "ty>=0.0.1a25",
  "pypdf>=6.2.0",
  "beautifulsoup4>=4.14.2",
  "markdown>=3.9",
  "pylatexenc>=2.10",
  "python-frontmatter>=1.1.0",
  "bibtexparser>=1.4.3",
]
dev = [
  "pytest>=8.4.1",
  "ruff>=0.1.0",
  "ty>=0.0.1a7",
  "tomli>=2.0.0",
]

[project.scripts]
aco = "acoharmony.cli:main"
aco-4icli = "acoharmony._4icli.cli:main"

[project.urls]
Documentation = "https://github.com/acoharmony/acoharmony#readme"
Issues = "https://github.com/acoharmony/acoharmony/issues"
Source = "https://github.com/acoharmony/acoharmony"

[tool.hatch.version]
path = "src/acoharmony/__init__.py"

[tool.hatch.build]
exclude = [
  "/.github",
  "/docs",
  "/deploy",
  "*.duckdb",
  "*.db",
  "/src/acoharmony/_dev",
  "/src/acoharmony/_docs",
  "/src/acoharmony/_notes",
  "/src/acoharmony/_deploy"
]

[tool.hatch.build.targets.wheel]
packages = ["src/acoharmony"]

[tool.acoharmony]
default_profile = "dev"
project_name = "ACO Harmony"
version = "2.0.0"

[tool.acoharmony.logging]
level = "INFO"
format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"

[tool.acoharmony.fixtures]
# Test fixtures configuration
fixtures_dir = "/opt/s3/data/workspace/logs/dev/fixtures"
duckdb_path = "/opt/s3/data/workspace/logs/dev/test.duckdb"
default_n_rows = 1000
schemas = ["fixtures", "bronze", "silver", "gold"]


[tool.acoharmony.profiles.dev]
environment = "development"

[tool.acoharmony.profiles.dev.storage]
backend = "local"
data_path = "/opt/s3/data/workspace"

[tool.acoharmony.profiles.dev.storage.filesystem]
type = "local"
permissions = "755"

[tool.acoharmony.profiles.dev.processing]
batch_size = 10000
max_workers = 12  # All CPU cores
memory_limit = "48GB"  # ~89% of total RAM

[tool.acoharmony.profiles.dev.polars]
# Optimize Polars for STREAMING to prevent memory exhaustion
max_threads = 12  # Match max_workers for consistency
streaming_chunk_size = 10000  # VERY SMALL: Prevents wslhost.exe memory fragmentation
string_cache = false  # Disabled to prevent memory accumulation across pipeline stages
force_streaming = true  # CRITICAL: Force streaming engine for all operations
# PyArrow optimizations
use_pyarrow = true
arrow_large_utf8 = true

[tool.acoharmony.profiles.dev.fouricli]
default_apm_id = "D0259"
default_year = 2026  # Note: Code dynamically uses current year if not set
config_path = "/usr/local/bin/config.txt"
binary_path = "/usr/local/bin/4icli"

[tool.acoharmony.profiles.dev.features]
debug_mode = true
verbose_logging = true
data_validation = true
performance_monitoring = false

[tool.acoharmony.profiles.dev.data_quality]
enable_validation = true
sample_rate = 0.1
fail_on_error = false

[tool.acoharmony.profiles.local]
environment = "local"

[tool.acoharmony.profiles.local.storage]
backend = "local"
data_path = "/opt/s3/data/workspace"

[tool.acoharmony.profiles.local.storage.filesystem]
type = "local"
auto_create_dirs = true

[tool.acoharmony.profiles.local.fouricli]
default_apm_id = "D0259"
default_year = 2026  # Note: Code dynamically uses current year if not set
config_path = "/usr/local/bin/config.txt"
binary_path = "/usr/local/bin/4icli"

[tool.acoharmony.profiles.local.processing]
batch_size = 10000
max_workers = 12  # All CPU cores
memory_limit = "48GB"  # ~89% of total RAM

[tool.acoharmony.profiles.local.polars]
# Optimized for local development
max_threads = 12  # Match max_workers
streaming_chunk_size = 100000
string_cache = true
use_pyarrow = true
arrow_large_utf8 = true

[tool.acoharmony.profiles.local.features]
debug_mode = true
verbose_logging = true
data_validation = false
performance_monitoring = false
use_sample_data = true

[tool.acoharmony.profiles.local.data_quality]
enable_validation = false

[tool.acoharmony.profiles.local.development]
hot_reload = true
profiling = true
test_mode = true

[tool.acoharmony.profiles.staging]
environment = "staging"

[tool.acoharmony.profiles.staging.storage]
backend = "s3api"
endpoint = "http://s3api:10001"
bucket = "aco"
access_key = "${S3_ACCESS_KEY:-aco_user}"
secret_key = "${S3_SECRET_KEY:-aco_password}"
use_ssl = false
verify_ssl = false
region = "us-east-1"
data_path = "s3://aco"

[tool.acoharmony.profiles.staging.storage.duckdb]
enabled = true
database = "/opt/s3/data/workspace/acoharmony.duckdb"

[tool.acoharmony.profiles.staging.fouricli]
default_apm_id = "D0259"
default_year = 2026  # Note: Code dynamically uses current year if not set
config_path = "deploy/compose/conf/4icli/config.txt"
binary_path = "/usr/local/bin/4icli"

[tool.acoharmony.profiles.staging.processing]
batch_size = 50000
max_workers = 12  # All CPU cores
memory_limit = "48GB"  # ~89% of total RAM

[tool.acoharmony.profiles.staging.polars]
# Optimized for staging environment
max_threads = 12
streaming_chunk_size = 150000
string_cache = true
use_pyarrow = true
arrow_large_utf8 = true

[tool.acoharmony.profiles.staging.features]
debug_mode = false
verbose_logging = true
data_validation = true
performance_monitoring = true

[tool.acoharmony.profiles.staging.data_quality]
enable_validation = true
sample_rate = 0.05
fail_on_error = true

[tool.acoharmony.profiles.staging.monitoring]
metrics_enabled = false
metrics_endpoint = "http://metrics:8080"
alert_threshold = 0.95

[tool.acoharmony.profiles.prod]
environment = "production"

[tool.acoharmony.profiles.prod.storage]
backend = "databricks"
databricks_host = "${DATABRICKS_HOST}"
databricks_token = "${DATABRICKS_TOKEN}"
catalog = "main"
schema = "aco_harmony"
data_path = "/Volumes/main/aco_harmony/data"

[tool.acoharmony.profiles.prod.storage.s3]
bucket = "harmonycares-prod"
region = "us-east-1"
use_ssl = true
verify_ssl = true

[tool.acoharmony.profiles.prod.database.edw]
enabled = true
host = "prod-db.harmonycares.internal"
port = 5432
database = "aco_prod"
schema = "aco_harmony"
ssl_mode = "require"

[tool.acoharmony.profiles.prod.database.edw.connection_pool]
min_size = 5
max_size = 20
timeout = 30

[tool.acoharmony.profiles.prod.fouricli]
default_apm_id = "D0259"
default_year = 2026  # Note: Code dynamically uses current year if not set
config_path = "deploy/compose/conf/4icli/config.txt"
binary_path = "/usr/local/bin/4icli"

[tool.acoharmony.profiles.prod.processing]
batch_size = 100000
max_workers = 16
memory_limit = "32GB"
checkpoint_interval = 1000000

[tool.acoharmony.profiles.prod.polars]
# Maximum performance for production
max_threads = 16  # Match max_workers
streaming_chunk_size = 250000
string_cache = true
use_pyarrow = true
arrow_large_utf8 = true

[tool.acoharmony.profiles.prod.features]
debug_mode = false
verbose_logging = false
data_validation = true
performance_monitoring = true
audit_logging = true

[tool.acoharmony.profiles.prod.data_quality]
enable_validation = true
sample_rate = 0.01
fail_on_error = true
quarantine_bad_records = true

[tool.acoharmony.profiles.prod.monitoring]
metrics_enabled = true
metrics_endpoint = "https://metrics.harmonycares.com"
alert_threshold = 0.99
pagerduty_enabled = true

[tool.acoharmony.profiles.prod.security]
encrypt_at_rest = true
encrypt_in_transit = true
audit_all_access = true
pii_masking = true

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
  "src/acoharmony/_dev/**",
  "src/acoharmony/_docs/**",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "PT",  # flake8-pytest-style
]
ignore = [
  "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",   # Allow assert in tests
  "PLR2004", # Allow magic values in tests
  "S311",   # Allow random for test data
]
"src/acoharmony/_test/**/*.py" = [
  "E402",   # Module import not at top - @auto_import decorator runs first
  "F821",   # Undefined name - auto_import injects at runtime
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["src/acoharmony/_test"]
pythonpath = ["src"]
python_files = ["*.py"]  # All .py files in _test are tests (not test_*.py convention)
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast unit tests (no I/O, inline data)",
    "integration: Integration tests (uses fixtures)",
    "reconciliation: Reconciliation tests (validates pipeline outputs against CMS reference data)",
    "slow: Slow tests (run separately)",
    "requires_data: Needs external data files",
]
# Exclude auto-generated coverage gap tests by default
norecursedirs = [
    "_coverage",  # Auto-generated coverage gap tests
    ".git",
    ".hypothesis",
    "__pycache__",
    "*.egg-info",
    "workspace",
    "_helpers",  # Test utilities, not tests
    "tuva",  # Third-party vendored dbt tests
]
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
    "--import-mode=importlib",  # Modern import mode
    "--strict-config",           # Fail on config errors
    # Coverage is collected via `coverage run -m pytest`, not pytest-cov.
    # This avoids the internal combine() race when parallel agents run.
    # See .claude/skills/ for the coverage workflow.
    "--no-cov",                  # Disable pytest-cov; coverage.py handles it
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Hypothesis settings
[tool.hypothesis]
max_examples = 100
deadline = 500  # 500ms per test
derandomize = true  # Deterministic for CI

[tool.coverage.run]
source_pkgs = ["acoharmony"]
branch = true
parallel = false
data_file = ".test-state/.coverage"
# Enable dynamic contexts for per-test coverage tracking
# Note: Not supported with Python 3.14+ sysmon (use legacy instead)
# dynamic_context = "test_function"  # Temporarily disabled due to SQLite issues
omit = [
    "*/tests/*",
    "*/test_*",
    "*/_test/*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/.hypothesis/*",
]

[tool.coverage.report]
# Report settings
skip_covered = false
skip_empty = true
exclude_lines = [
    "no cov",
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError\\(\"unreachable\"\\)",
    "raise RuntimeError\\(\"impossible\"\\)",
    "@abstract",
    "@overload",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "if sys.platform",
    "if platform.system",
    "# ALLOWED:.*",  # Intentional exception handling
]

[tool.coverage.json]
output = ".test-state/coverage.json"
# Include contexts for per-test tracking
show_contexts = true
# Pretty print for easier debugging
pretty_print = true

[tool.uv]
# Manage this project as a workspace to ensure consistent environment
managed = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
    "reportlab>=4.4.10",
    "ruff>=0.1.0",
    "ty>=0.0.1a7",
]
