[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "acoharmony"
dynamic = ["version"]
description = "ACO program data wrangling and healthcare data processing"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
keywords = ["healthcare", "medicare", "aco", "cclf", "polars"]
authors = [
  { name = "Kris Coriwn", email = "kcorwin@harmonycares.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
  "polars>=0.20.0",
  "pyarrow>=21.0.0",
  "numpy>=2.0.2",
  "pyyaml>=6.0",
  "click>=8.0.0",
  "python-dateutil>=2.9.0.post0",
  "fastexcel>=0.15.1",
  "xlsxwriter>=3.2.9",
  "openpyxl>=3.1.5",
  "duckdb>=1.3.2",
  "tomli>=2.3.0",
  "lxml>=6.1.0",
  "pydantic>=2.11.7",
  "altair>=6.1.0",
  "usaddress>=0.5.16",
]

[project.optional-dependencies]
full = [
  "jinja2>=3.0.0",
  "psutil>=7.0.0",
  "duckdb>=1.1.0",
  "marimo>=0.23.2",
  "dbt-duckdb>=1.9.6",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
  "ty>=0.0.1a25",
  "pypdf>=6.10.0",
  "beautifulsoup4>=4.14.2",
  "markdown>=3.10.2",
  "pymdown-extensions>=10.21.2",
  "pylatexenc>=2.10",
  "python-frontmatter>=1.1.0",
  "bibtexparser>=1.4.3",
]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.1.0",
  "ty>=0.0.1a7",
  "tomli>=2.0.0",
]

[project.scripts]
aco = "acoharmony.cli:main"
aco-4icli = "acoharmony._4icli.cli:main"

[project.urls]
Documentation = "https://github.com/acoharmony/aco#readme"
Issues = "https://github.com/acoharmony/aco/issues"
Source = "https://github.com/acoharmony/aco"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/acoharmony/_version.py"

[tool.hatch.build]
exclude = [
  "/.github",
  "/docs",
  "/deploy",
  "*.duckdb",
  "*.db",
  "/src/acoharmony/_dev",
  "/src/acoharmony/_docs",
  "/src/acoharmony/_deploy"
  # Note: _notes is intentionally NOT excluded. Marimo notebooks in
  # /opt/s3/data/notebooks do `from acoharmony._notes.plugins import ...`
  # at runtime, so the subpackage must ship with the wheel.
]

[tool.hatch.build.targets.wheel]
packages = ["src/acoharmony"]

# NOTE: application config (profiles, logging, fixtures) lives in
# src/acoharmony/_config/aco.toml so it ships with the wheel and can be
# loaded via importlib.resources regardless of install location. It is not
# embedded in this file because pyproject.toml is not part of the package.

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
  "src/acoharmony/_dev/**",
  "src/acoharmony/_docs/**",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "PT",  # flake8-pytest-style
]
ignore = [
  "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",   # Allow assert in tests
  "PLR2004", # Allow magic values in tests
  "S311",   # Allow random for test data
]
"src/acoharmony/_test/**/*.py" = [
  "E402",   # Module import not at top - @auto_import decorator runs first
  "F821",   # Undefined name - auto_import injects at runtime
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["src/acoharmony/_test"]
pythonpath = ["src"]
python_files = ["*.py"]  # All .py files in _test are tests (not test_*.py convention)
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast unit tests (no I/O, inline data)",
    "integration: Integration tests (uses fixtures)",
    "reconciliation: Reconciliation tests (validates pipeline outputs against CMS reference data)",
    "slow: Slow tests (run separately)",
    "requires_data: Needs external data files",
]
# Exclude auto-generated coverage gap tests by default
norecursedirs = [
    "_coverage",  # Auto-generated coverage gap tests
    ".git",
    ".hypothesis",
    "__pycache__",
    "*.egg-info",
    "workspace",
    "_helpers",  # Test utilities, not tests
    "_fixtures",  # Test data fixtures (e.g. vendored notebooks), not tests
]
addopts = [
    "--strict-markers",
    "-v",
    "--tb=short",
    "--import-mode=importlib",  # Modern import mode
    "--strict-config",           # Fail on config errors
    # Coverage is collected via `coverage run -m pytest`, not pytest-cov.
    # This avoids the internal combine() race when parallel agents run.
    # See .claude/skills/ for the coverage workflow.
    "--no-cov",                  # Disable pytest-cov; coverage.py handles it
    # Skip vendored third-party dbt test trees under _test/tuva/depends/repos/.
    # We DO want to run our own _test/tuva/* tests (those cover _tuva/*),
    # and our own _test/tuva/depends/setup.py.
    "--ignore=src/acoharmony/_test/tuva/depends/repos",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Hypothesis settings
[tool.hypothesis]
max_examples = 100
deadline = 500  # 500ms per test
derandomize = true  # Deterministic for CI

[tool.coverage.run]
source_pkgs = ["acoharmony"]
branch = true
parallel = false
data_file = ".test-state/.coverage"
# Enable dynamic contexts for per-test coverage tracking
# Note: Not supported with Python 3.14+ sysmon (use legacy instead)
# dynamic_context = "test_function"  # Temporarily disabled due to SQLite issues
omit = [
    "*/tests/*",
    "*/test_*",
    "*/_test/*",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/.hypothesis/*",
    # Vendored third-party code: we ship it as-is from upstream, so forcing
    # 100% coverage on it would mean writing tests for someone else's
    # library. The vendor-mechanics tests in _test/depends/ verify the
    # parts of the vendored surface we actually rely on.
    "*/_depends/*",
]

[tool.coverage.report]
# Report settings
skip_covered = false
skip_empty = true
exclude_lines = [
    "no cov",
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError\\(\"unreachable\"\\)",
    "raise RuntimeError\\(\"impossible\"\\)",
    "@abstract",
    "@overload",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "if sys.platform",
    "if platform.system",
    "# ALLOWED:.*",  # Intentional exception handling
]

[tool.coverage.json]
output = ".test-state/coverage.json"
# Include contexts for per-test tracking
show_contexts = true
# Pretty print for easier debugging
pretty_print = true

[tool.uv]
# Manage this project as a workspace to ensure consistent environment
managed = true

[dependency-groups]
dev = [
    "faker>=40.13.0",
    "hatch-vcs>=0.5.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "reportlab>=4.4.10",
    "ruff>=0.1.0",
    "ty>=0.0.1a7",
]
